minigu/parser/src/parser/impls/snapshots/gql_parser__parser__impls__session__tests__session_reset_command_6.snap
---
source: minigu/parser/src/parser/impls/session.rs
expression: parsed
---
- - Parameter:
      - abc
      - start: 24
        end: 28
  - start: 14
    end: 28
- start: 0
  end: 28
