minigu/parser/src/parser/impls/snapshots/gql_parser__parser__impls__session__tests__session_set_command_schema.snap
---
source: minigu/parser/src/parser/impls/session.rs
expression: parsed
---
- Schema:
    - Absolute: []
    - start: 19
      end: 20
- start: 0
  end: 20
